--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ section{
 .contact h1{
     color: white;
     padding-left: 300px;
+    padding-right: 20px;
     padding-top: 60px; 
     
      
@@ -98,8 +99,7 @@ section{
     border-radius: 5px; 
     color: white;
     font-weight: 700;
-    float: right;
-    margin-right: 400px;
+    margin-left: 400px;
     
 }
 
